# odawg

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/: lib.yml
.github/actions/lib/: action.yml
.github/workflows/: main.yml  test.yml
examples/large/: Large.txt  main.rs
proptest-regressions/: pattern.txt
proptest-regressions/dawg/: flat.txt
proptest-regressions/node/: thin.txt
proptest-regressions/pattern/: convert.txt  iters.txt  parse.txt
proptest-regressions/utility/: merge.txt
src/: lib.rs
src/dawg/: all.rs  and.rs  any.rs  flat.rs  mod.rs  or.rs
src/dawg/iters/: mod.rs  nodes.rs  words.rs
src/dawg/traits/: index.rs  mod.rs  read.rs  word.rs  write.rs
src/node/: all.rs  and.rs  any.rs  iters.rs  mod.rs  or.rs  thin.rs  wide.rs
src/pattern/: convert.rs  display.rs  iters.rs  letter.rs  mod.rs  parse.rs
src/utils/: convert.rs  end_sort.rs  merge.rs  mod.rs  serde_array.rs  sorted.rs
