[package]
name = "odawg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = { version = "1.4.0", features = ["fork", "timeout"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
visibility = { version = "0.1.0", optional = true }

[features]
doctest-all = ["visibility"]
