[package]
name = "odawg"
version = "0.1.0"
edition = "2021"
authors = ["alexanderdcolby@proton.me"]
description = "Directed Acyclic Graphs for storing words"
readme = "README.md"
homepage = "https://github.com/Mr-Helpful/odawg"
repository = "https://github.com/Mr-Helpful/odawg"
license = "MIT"
keywords = ["text", "search", "string", "encoding"]
categories = ["algorithms", "data-structures", "text-processing"]
exclude = ["/.github", "/examples", "/proptest-regressions"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = { version = "1.4.0", features = ["fork", "timeout"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
visibility = { version = "0.1.0", optional = true }

[features]
doctest-all = ["visibility"]

[dev-dependencies]
bincode = "1.3.3"
