[package]
name = "odawg"
version = "0.1.0"
edition = "2021"
authors = ["alexanderdcolby@proton.me"]
description = "Directed Acyclic Graphs for storing words"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Mr-Helpful/odawg"
repository = "https://github.com/Mr-Helpful/odawg"
keywords = ["text", "search", "string", "encoding"]
categories = ["algorithms", "data-structures", "text-processing"]
exclude = ["/.github", "/examples", "/proptest-regressions"]

[dependencies]
proptest = { version = "1.4.0", features = ["fork", "timeout"] }
serde = { version = "1.0.210", features = ["serde_derive"] }

[dev-dependencies]
bincode = "1.3.3"
